@startuml xexprengine

namespace xexprengine{
    
    class ExprValue {
    + ExprValue()
    + ExprValue(const T& val)
    + ExprValue(const char* val)
    + static Null() : ExprValue
    + operator bool() : bool
    + operator==(const ExprValue&) : bool
    + operator<(const ExprValue&) : bool
    + IsNull() : bool
    + Type() : const std::type_info&
    + Cast<T>() : T
    + ToString() : std::string
    - value_ptr_ : std::shared_ptr<ValueBase>
    }

    interface ValueBase {
    + {abstract} ~ValueBase()
    + {abstract} Type() : const std::type_info&
    + {abstract} ToString() : std::string
    + IsNull() : bool
    }

    class "Value<T>" {
    + Value(const T& val)
    + Type() : const std::type_info&
    + ToString() : std::string
    + IsNull() : bool
    + value() : const T&
    - value_ : T
    }

    class "Value<void>" {
    + Value()
    + Type() : const std::type_info&
    + ToString() : std::string
    + IsNull() : bool
    }

    note top of "Value<void>": alias NullValue

    ExprValue o--> ValueBase
    ValueBase <|-- "Value<T>"
    ValueBase <|-- "Value<void>"
}
@enduml